manifests/idp.yaml
apiVersion: apps/v1
kind: Deployment
# deplyment's name
metadata:
  name: tallyme-idp
spec:
  replicas: 1
  selector:
    # target the deployment manages
    matchLabels:
      app: tallyme-idp
  template:
    metadata:
      # pods' labal
      labels:
        app: tallyme-idp
    spec:
      enableServiceLinks: false
      containers:
      - name: tallyme-idp
        image: tallyme-idp:dev
        imagePullPolicy: Never # use local image built inside Minikube
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tallyme-idp-service # service's name
spec:
  selector:
    app: tallyme-idp # deployment's name
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tallyme-idp-ingress
  annotations:
    # force http requests to redirect to https
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # enable https for the specified host using Minikube's fake certificate
  tls:
  - hosts:
    - tallyme-idp.localhost
  rules:
  - host: tallyme-idp.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tallyme-idp-service # service's name
            port:
              number: 8080
