manifests/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tallyme-resource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tallyme-resource
  template:
    metadata:
      labels:
        app: tallyme-resource
    spec:
      enableServiceLinks: false
      containers:
      - name: tallyme-resource
        image: tallyme-resource:dev
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tallyme-resource-service
spec:
  selector:
    app: tallyme-resource
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tallyme-resource-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - tallyme-resource.localhost
  rules:
  - host: tallyme-resource.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tallyme-resource-service
            port:
              number: 8081
